executor: E5-T20 verified, E5-T22 in_progress · claude:claude-opus-5-5